 * Deprecated Field::getSample in favor of getValues
 * Deprecated SobolIndicesAlgorithm::Generate in favor of SobolIndicesExperiment.

=== Python module ===

=== Miscellaneous ===
 * Changed bounds evaluation in UniformFactory, BetaFactory

=== Bug fixes ===
 * #890 (Cannot build triangular distribution)
 * #891 (Viewer issue with Pairs drawables)
 * #896 (Python iteration in ProcessSample leads to capacity overflow)
 * #897 (Bug in Graph::draw with small data)
 * #898 (Could not save/load some persistent classes)
 * #899 (PythonDistribution copula crash when parallelism is active)
 * #902 (NormalGamma constructor builds wrong link function)
 * #905 (Bogus MaternModel::setParameter)
 * #906 (t_LevelSetMesher_std fails on most non-Intel based chips)
 * #907 (Notation)
 * #908 (Documentation: change titles)
 * #909 (Wrong argument type in the API doc)
 * #910 (Graph of a d-dimensionnal distribution)
 * #911 (In the Field class, the getSample and getValues methods are duplicate)
 * #912 (Wrong description of Histogram constructor parameters)
 * #914 (KarhunenLoeveQuadratureAlgorithm crashes for covariance models of dimension>1)
 * #917 (Bug in RandomMixture::computeCDF())
 * #919 (Wrong simplification mechanism in MarginalTransformationEvaluation for Exponential distribution)
 * #921 (Cannot print a FixedExperiment when built from sample and weight)
 * #923 (Fix ExponentialModel::getParameter for diagonal correlation)
 * #930 (The getMean method has a weird behavior on parametrized distribution)

== 1.9 release (2017-04-18) == #release-1.9

=== Library ===

==== Major changes ====
 * Integrate otlhs module
 * New function API
 * Canonical format low-rank tensor approximation
 * EGO global optimization algorithm

==== New classes ====
 * SpaceFillingPhiP, SpaceFillingMinDist, SpaceFillingC2
 * LinearProfile, GeometricProfile
 * MonteCarloLHS, SimulatedAnnealingLHS
 * LHSResult
 * MultiStart
 * MethodOfMomentsFactory